# Sentra

./: .gitignore  README.md  README_CN.md  tatus
apps/: README.md
configs/: db.yaml  llm.yaml
configs/sentra/: agents.yaml  api.yaml  kg.yaml  logging.yaml  sentra_config.py
desktop/: .gitignore  API_ENDPOINTS.md  FRONTEND_DEVELOPMENT.md  GETTING_STARTED.md  README.md  START.bat  START.sh  TAURI_GUIDE.md  next.config.mjs  package-lock.json  package.json  start-dev.bat  tailwind.config.ts  打包部署文档.md  知识库模块.md
desktop/app/: layout.tsx  page.tsx
desktop/app/about/: page.tsx
desktop/app/dashboard/: page.tsx
desktop/app/entity-templates/: page.tsx
desktop/app/knowledge-base/: page.tsx
desktop/app/login/: page.tsx
desktop/app/settings/: page.tsx
desktop/app/users/: page.tsx
desktop/components/: auth-provider.tsx  theme-provider.tsx
desktop/components/documents/: chunks-view.tsx  (+3 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/types/: knowledge.ts  user.ts
java/: DEPLOY.md  README.md  pom.xml  前端开发-知识库管理功能模块.md  图谱实体信息表结构.md
java/sentra-agent-service/: pom.xml
java/sentra-common/: pom.xml
java/sentra-knowledge-service/: pom.xml  死消息队列和失败任务的回调处理.md  项目结构说明.md
java/sentra-user-service/: pom.xml
sentra/: KNOWLEDGE_BASE_README.md  README.md  cli.py  load_config.py
sentra/api/: main.py
sentra/core/: __init__.py  llm_factory.py
sentra/utils/: common.py  logger.py  run_concurrent.py  save_json.py
tests/: kb_build.py
tests/sentra/: knowledgeBase_build_pipeline.py  test_indexing.py  test_ingestion.py  test_llm_factory.py
(+177 files in other folders)
